--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,8 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace "nl.zeilvaartwarmond.szwtracktrace"
-    compileSdkVersion 33 //flutter.compileSdkVersion
+    compileSdk 34
+    //flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
