--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.1.0+310
+version: 3.1.1+311
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -45,6 +45,7 @@ dependencies:
   latlong2: ^0.9.0
   http: ^1.0.0
   intl: ^0.18.1
+  universal_html: ^2.2.3
 
 dev_dependencies:
   flutter_test:
