--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.1.2+312
+version: 3.1.3+313
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -46,6 +46,7 @@ dependencies:
   http: ^1.0.0
   intl: ^0.18.1
   universal_html: ^2.2.3
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
