--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.1.4+314
+version: 3.1.5+315
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -36,10 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
 #  flutter_html: ^2.2.1
   flutter_html: ^3.0.0-beta.1
-  flutter_map: ^5.0.0
+  flutter_map: ^6.0.1
   shared_preferences: ^2.2.0
   url_launcher: ^6.1.12
-  uuid: ^3.0.7
+  uuid: ^4.1.0
   package_info_plus: ^4.0.2
   flutter_svg: ^2.0.7
   latlong2: ^0.9.0
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.18.1
   universal_html: ^2.2.3
   vector_math: ^2.1.4
+  flutter_map_cancellable_tile_provider: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
   msix: ^3.16.4
 
 msix_config:
