--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "szwtracktrace",
+    "name": "SZW Track & Trace",
     "short_name": "szwtracktrace",
     "start_url": ".",
     "display": "standalone",
