--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: szwtracktrace
-description: Track & Trace app voor wedstrijden met historische zeilende bedrijfsvaartuigen en roeisloepen
+description: Track & Trace app voor zeil- en roeiwedstrijden
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.1.7+317
+version: 3.1.8+318
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -53,6 +53,8 @@ dependencies:
   flutter_map_cancellable_tile_provider: ^2.0.0
   http: ^1.1.2
   vector_map_tiles: ^7.0.0
+  crypto: ^3.0.3
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
