--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,13 +1,35 @@
 {
-  "name": "SZW Track & Trace",
-  "short_name": "szwtracktrace",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#0175C2",
-  "theme_color": "#0175C2",
-  "description": "Track & Trace app voor wedstrijden met historische zeilende bedrijfsvaartuigen",
-  "orientation": "portrait-primary",
-  "prefer_related_applications": false,
-  "icons": [
-  ]
+    "name": "SZW Track & Trace",
+    "short_name": "SZW Track & Trace",
+    "start_url": ".",
+    "display": "standalone",
+    "background_color": "#FFFFFF",
+    "theme_color": "#FFFFFF",
+    "description": "Track & Trace app voor wedstrijden met historische zeilende bedrijfsvaartuigen",
+    "orientation": "portrait-primary",
+    "prefer_related_applications": false,
+    "icons": [
+        {
+            "src": "icons/Icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/Icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/Icon-maskable-192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "icons/Icon-maskable-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        }
+    ]
 }
