--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.1.9+319
+version: 3.2.0+320
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -33,31 +33,28 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   #  flutter_html: ^2.2.1
+  auto_size_text: ^3.0.0
+  bordered_text: ^2.0.0
+  collection: ^1.18.0
+  flutter_animate: ^4.3.0
   flutter_html: ^3.0.0-beta.1
+  flutter_launcher_icons: ^0.13.1
   flutter_map: ^6.0.1
+  flutter_map_cancellable_tile_provider: ^2.0.0
+  flutter_svg: ^2.0.7
+  fullscreen_window: ^1.0.3
+  http: ^1.1.2
+  intl: ^0.19.0
+  latlong2: ^0.9.0
+  package_info_plus: ^5.0.1
+  pointycastle: ^3.7.4
   shared_preferences: ^2.2.0
+  universal_html: ^2.2.3
   url_launcher: ^6.1.12
   uuid: ^4.1.0
-  package_info_plus: ^5.0.1
-  flutter_svg: ^2.0.7
-  latlong2: ^0.9.0
-  intl: ^0.19.0
-  universal_html: ^2.2.3
-  vector_math: ^2.1.4
-  auto_size_text: ^3.0.0
-  fullscreen_window: ^1.0.3
-  easy_draggable: ^0.0.2
-  flutter_animate: ^4.3.0
-  flutter_map_cancellable_tile_provider: ^2.0.0
-  http: ^1.1.2
   vector_map_tiles: ^7.0.0
-  crypto: ^3.0.3
-  flutter_launcher_icons: ^0.13.1
-  pointycastle: ^3.7.4
-  collection: ^1.18.0
-  desktop_window: ^0.4.0
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
