--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.2.0+320
+version: 3.2.1+321
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: '>=3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -40,20 +40,20 @@ dependencies:
   flutter_animate: ^4.3.0
   flutter_html: ^3.0.0-beta.1
   flutter_launcher_icons: ^0.13.1
-  flutter_map: ^6.0.1
-  flutter_map_cancellable_tile_provider: ^2.0.0
+  flutter_map: ^7.0.0-dev.1
+  #  flutter_map_cancellable_tile_provider: ^2.0.0
   flutter_svg: ^2.0.7
   fullscreen_window: ^1.0.3
   http: ^1.1.2
   intl: ^0.19.0
   latlong2: ^0.9.0
-  package_info_plus: ^5.0.1
+  package_info_plus: ^6.0.0
   pointycastle: ^3.7.4
   shared_preferences: ^2.2.0
   universal_html: ^2.2.3
   url_launcher: ^6.1.12
   uuid: ^4.1.0
-  vector_map_tiles: ^7.0.0
+  #  vector_map_tiles: ^7.0.0
   vector_math: ^2.1.4
 
 dev_dependencies:
