--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -92,7 +92,7 @@ BEGIN
             VALUE "CompanyName", "nl.zeilvaartwarmond" "\0"
             VALUE "FileDescription", "szwtracktrace" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "nl.zeilvaartwarmond.szwtracktrace" "\0"
+            VALUE "InternalName", "nl.sportvolgen.svtracktrace" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 nl.zeilvaartwarmond. All rights reserved." "\0"
             VALUE "OriginalFilename", "szwtracktrace.exe" "\0"
             VALUE "ProductName", "szwtracktrace" "\0"
