--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   flutter_animate: ^4.3.0
   flutter_html: ^3.0.0-beta.1
   flutter_launcher_icons: ^0.13.1
-  flutter_map: ^7.0.0-dev.1
+  flutter_map: ^7.0.0
   flutter_svg: ^2.0.7
   fullscreen_window: ^1.0.3
   http: ^1.1.2
@@ -65,7 +65,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   msix: ^3.16.4
 
 msix_config:
