--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.2.7+327
+version: 3.2.8+328
 
 environment:
   sdk: '>=3.0.0'
@@ -55,6 +55,10 @@ dependencies:
   url_launcher: ^6.1.12
   uuid: ^4.1.0
   vector_math: ^2.1.4
+  flutter_map_cache: ^1.5.1
+  path_provider: ^2.1.3
+  dio_cache_interceptor_file_store: ^1.2.3
+  dio_cache_interceptor: ^3.5.0
 
 dev_dependencies:
   flutter_test:
