--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  #  flutter_html: ^2.2.1
-  #  flutter_map_cancellable_tile_provider: ^2.0.0
-  #  vector_map_tiles: ^7.0.0
   bordered_text: ^2.0.0
   collection: ^1.18.0
   flutter_animate: ^4.3.0
@@ -71,6 +66,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   msix: ^3.16.4
 
+# Settings for the msix windows app builder. See https://pub.dev/packages/msix
 msix_config:
   display_name: SZW Track & Trace
   logo_path: C:\Users\hwkei\AndroidStudioProjects\Icon-App-1024x1024 Track & Trace.png
