--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dio_cache_interceptor_file_store: ^1.2.3
   dio_cache_interceptor: ^3.5.0
   flutter_html: ^3.0.0-beta.2
+  share_plus: ^10.0.0
 
 dev_dependencies:
   flutter_test:
