--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.3.1+331
+version: 3.3.2+332
 
 environment:
   sdk: '>=3.0.0'
@@ -33,27 +33,27 @@ dependencies:
 
   bordered_text: ^2.0.0
   collection: ^1.18.0
+  dio: ^5.7.0
+  dio_cache_interceptor: ^3.5.0
+  dio_cache_interceptor_file_store: ^1.2.3
   flutter_animate: ^4.3.0
+  flutter_html: ^3.0.0-beta.2
   flutter_launcher_icons: ^0.14.1
   flutter_map: ^7.0.0
+  flutter_map_cache: ^1.5.1
   flutter_svg: ^2.0.7
   fullscreen_window: ^1.0.3
-  http: ^1.1.2
   intl: ^0.20.0
   latlong2: ^0.9.0
   package_info_plus: ^8.0.0
+  path_provider: ^2.1.3
   pointycastle: ^3.7.4
+  share_plus: ^10.0.0
   shared_preferences: ^2.2.0
   universal_html: ^2.2.3
   url_launcher: ^6.1.12
   uuid: ^4.1.0
   vector_math: ^2.1.4
-  flutter_map_cache: ^1.5.1
-  path_provider: ^2.1.3
-  dio_cache_interceptor_file_store: ^1.2.3
-  dio_cache_interceptor: ^3.5.0
-  flutter_html: ^3.0.0-beta.2
-  share_plus: ^10.0.0
 
 dev_dependencies:
   flutter_test:
